# jibo-workshop-fol2024

./: .gitignore  Dockerfile  README.md  activate  build.sh  enter-rosbridge-skill.sh  enter_rosbridge_skill.sh  entrypoint.sh  exit-rosbridge-skill.sh  hello.sh  launch.sh  ros2_workspace  setup.sh  watch.sh
.devcontainer/: Dockerfile  devcontainer.json
container/: Dockerfile  build.sh  entrypoint.sh
container/ros2_workspace/src/jibo_msgs/: test_jibo_message.py
container/ros2_workspace/src/jibo_msgs/msg/: JiboAction.msg  JiboAsrCommand.msg  JiboAsrResult.msg  JiboState.msg
notebooks/: jibo_teleop_flags.py  jibo_teleop_ros.py  workshop.ipynb  workshop_testing.ipynb
notebooks/install/: local_setup.sh  setup.sh
notebooks/log/: latest_build
ros2_workspace/install/: local_setup.sh  setup.sh
ros2_workspace/install/jibo_msgs/share/jibo_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_workspace/install/jibo_msgs/share/jibo_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  export_jibo_msgs__rosidl_generator_cExport-noconfig.cmake  export_jibo_msgs__rosidl_generator_pyExport-noconfig.cmake  export_jibo_msgs__rosidl_generator_pyExport.cmake  export_jibo_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_jibo_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+4 more)
ros2_workspace/log/: latest_build
ros2_workspace/src/jibo_msgs/: CMakeLists.txt  CMakeLists.txt.ros2maybe  README.md
ros2_workspace/src/jibo_msgs/msg/: JiboRemote.msg
web/: index.html  mc.js  server.sh
(+67 files in other folders)
